--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ body {
  
   </div>
   <div class="column" style="background-color:#33E8FE;"><b>-The Asian elephant</b>
+    <p> *is the only living species of the genus Elephas and is distributed throughout the Indian subcontinent and Southeast Asia, from India in the west, Nepal in the north, Sumatra in the south, and to Borneo in the east.</p>
   <img src="asele.jpg">
   </div>
 </div>
